# bdomarket

./: .gitignore  404.html  README.md  build.ps1  cicd.ps1  example.py  index.html  mkdocs.yml  objects.inv  pypiupload.cmd  pyproject.toml  release.ps1  runbuild.ps1  runsetuptools.ps1  setup.cfg  sitemap.xml  test.py  testpackage2.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  python-publish.yml  release.yml
bdomarket/: index.html
docs/: bdomarket.md  identifiers.md  index.md  reference.md  response.md  utils.md
identifiers/: index.html
response/: index.html
search/: search_index.json
src/: __init__.py  setup.py
src/bdomarket/: __init__.py  api.py  bdomarket.py  identifiers.py  response.py  utils.py
src/bdomarket/timers/: __init__.py  boss.py  utils.py
utils/: index.html
